--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @import "tw-animate-css";
-
+@plugin 'tailwind-scrollbar';
 @custom-variant dark (&:is(.dark *));
 
 :root {
@@ -115,6 +115,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
